# test-rust-app

./: .gitignore  Cargo.toml
.serena/: project.yml
crates/domain/: Cargo.toml
crates/domain/src/: book.rs  lib.rs  repository.rs
crates/infrastructure-db/: Cargo.toml
crates/infrastructure-db/resources/: schema.xml
crates/infrastructure-db/src/: db.rs  lib.rs
crates/infrastructure-db/src/book/: entity.rs  repo.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: main.rs
crates/migration/: Cargo.toml
crates/migration/migrations/: V1__create_books.sql
crates/migration/src/: lib.rs  m20241201_000001_create_books.rs
crates/rest_api/: Cargo.toml
crates/rest_api/src/: auth.rs  book_routes.rs  dev_token.rs  lib.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs
crates/services/src/book/: mod.rs
