[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
stano-common      = { path = "../../../modular-rust-platform/crates/stano-common" }
stano-di          = { path = "../../../modular-rust-platform/crates/stano-di" }
stano-di-macros   = { path = "../../../modular-rust-platform/crates/stano-di-macros" }
uuid              = { version = "1", features = ["v4", "v7", "serde"] }
serde             = { version = "1", features = ["derive"] }
async-trait       = "0.1"
