[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
stano-starter-domain = { path = "../../../modular-rust-platform/crates/stano-starter-domain" }
uuid                 = { version = "1", features = ["v4", "v7", "serde"] }
serde                = { version = "1", features = ["derive"] }
async-trait          = "0.1"
