[package]
name = "infrastructure-db"
version = "0.1.0"
edition = "2024"

[dependencies]
domain            = { path = "../domain" }
migration         = { path = "../migration" }
stano-starter     = { path = "../../../modular-rust-platform/crates/stano-starter" }
stano-seaorm      = { path = "../../../modular-rust-platform/crates/stano-seaorm" }
sea-orm           = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
uuid              = { version = "1", features = ["v4", "v7", "serde"] }
async-trait       = "0.1"
anyhow            = "1"
