[package]
name = "rest_api"
version = "0.1.0"
edition = "2024"

[dependencies]
services          = { path = "../services" }
security          = { path = "../security" }
stano-starter-rest = { path = "../../../modular-rust-platform/crates/stano-starter-rest" }
axum              = { version = "0.8.7" }
serde             = { version = "1", features = ["derive"] }
uuid              = { version = "1", features = ["v4"] }
tracing           = "0.1"
