[package]
name = "services"
version = "0.1.0"
edition = "2024"

[dependencies]
domain            = { path = "../domain" }
security          = { path = "../security" }
stano-starter-service = { path = "../../../modular-rust-platform/crates/stano-starter-service" }
serde             = { version = "1", features = ["derive"] }
async-trait       = "0.1"
